--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,107 @@
+@font-face {
+  font-family: "AlJazeera-Regular";
+  src: url("/fonts/AlJazeera-Regular.ttf"); }
+@font-face {
+  font-family: "AlJazeera-Bold";
+  src: url("/fonts/AlJazeera-Bold.ttf"); }
+@font-face {
+  font-family: "AlJazeera-light";
+  src: url("/fonts/AlJazeera-Light.ttf"); }
+@font-face {
+  font-family: "Cairo-Light";
+  src: url("/fonts/Cairo-Light.ttf"); }
+* {
+  box-sizing: border-box; }
 
+body {
+  margin: 0;
+  font-family: "AlJazeera-Regular", arial, sans-serif; }
+
+.clear {
+  content: "";
+  display: table;
+  clear: both; }
+
+#header-section {
+  background: #6f2f8f;
+  background: -moz-linear-gradient(left, #6f2f8f 0%, #a2378e 100%);
+  background: -webkit-linear-gradient(left, #6f2f8f 0%, #a2378e 100%);
+  background: linear-gradient(to right, #6f2f8f 0%, #a2378e 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6f2f8f', endColorstr='#a2378e',GradientType=1 ); }
+
+#header-section .top-header-section {
+  display: block;
+  border-bottom: 2px solid #8e4a9c;
+  height: 122px;
+  /*Start Styling the top header section */ }
+
+.top-header-section .containerBody .logo {
+  margin: 0 auto;
+  text-align: center; }
+  .top-header-section .containerBody .logo a {
+    display: inline-block;
+    margin-top: 25px; }
+  .top-header-section .containerBody .logo img {
+    width: 150px; }
+
+.top-header-section .containerBody .menuBurger {
+  float: right;
+  position: absolute;
+  top: 15px;
+  right: 20px; }
+
+.burger-item div {
+  height: 4px;
+  background: #f8f8f8;
+  border: 0.3px solid #dbb8d5;
+  margin: 7px 0;
+  border-radius: 0px;
+  transition: 0.3s; }
+
+.burger-item {
+  display: block;
+  margin: 2em 0 0 2em;
+  width: 40px;
+  transform: rotate(180deg); }
+
+.one {
+  width: 20px; }
+
+.two {
+  width: 30px; }
+
+.three {
+  width: 40px; }
+
+.burger-item:hover div {
+  width: 40px;
+  /*Ends of header section */ }
+
+#header-section .bottom-header-section {
+  display: block;
+  height: 50px; }
+
+.scroll {
+  white-space: nowrap;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar; }
+
+.nav-one-header {
+  border-radius: 3px; }
+
+.nav-item {
+  padding: 12px 16px 13px;
+  font-size: 16px;
+  color: #c9a5d1; }
+
+.nav-item, .vertical-align-middle {
+  display: inline-block;
+  vertical-align: middle;
+  text-align: right;
+  list-style-position: inside; }
+
+.scroll::-webkit-scrollbar {
+  display: none; }
 
 /*# sourceMappingURL=index.css.map */
