--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,9 @@ body {
   margin: 0;
   font-family: "AlJazeera-Regular"; }
 
+a {
+  text-decoration: none; }
+
 .clear {
   content: "";
   display: table;
@@ -29,10 +32,22 @@ body {
   background: linear-gradient(to right, #6f2f8f 0%, #a2378e 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6f2f8f', endColorstr='#a2378e',GradientType=1 ); }
 
+#header-sectionContent {
+  background-color: #fff; }
+
+#header-sectionContent .top-header-section {
+  display: block;
+  border-bottom: 1px solid #ddd; }
+
 #header-section .top-header-section {
   display: block;
-  border-bottom: 2px solid #8e4a9c;
-  /*Start Styling the top header section */ }
+  border-bottom: 2px solid #8e4a9c; }
+
+#header-sectionContent img {
+  width: 30px; }
+
+.containerBody {
+  position: relative; }
 
 .top-header-section .containerBody .logo {
   margin: 0 auto;
@@ -49,6 +64,52 @@ body {
   position: absolute;
   top: 0;
   right: 20px; }
+
+.top-header-section .containerBody .arrows {
+  float: left;
+  position: absolute;
+  top: 55%;
+  left: 20px;
+  transform: translateY(-50%); }
+
+.top-header-section .containerBody .arrows img {
+  width: 15px !important; }
+
+#header-sectionContent .socialShare {
+  overflow: hidden; }
+
+.contentMedia {
+  text-align: right;
+  margin: 10px 0;
+  font-family: "AlJazeera-Regular";
+  font-size: 20px;
+  line-height: 35px; }
+
+.fa-shareBTN a, .tw-shareBTN a {
+  padding: 5px 15px;
+  border-radius: 4px;
+  width: 49%;
+  display: inline-block;
+  color: #fff;
+  text-align: right;
+  font-family: "AlJazeera-Regular";
+  font-size: 16px; }
+
+.fa-shareBTN a {
+  background-color: #496399;
+  float: left; }
+
+.tw-shareBTN a {
+  background-color: #2fb1e3;
+  float: right; }
+
+#header-sectionContent .burger-item div {
+  height: 4px;
+  background: #818181;
+  border: 0.3px solid #dbb8d5;
+  margin: 7px 0;
+  border-radius: 0px;
+  transition: 0.3s; }
 
 .burger-item div {
   height: 4px;
@@ -77,7 +138,7 @@ body {
   width: 40px;
   /*Ends of header section */ }
 
-#header-section .bottom-header-section {
+#header-section .bottom-header-section, #header-sectionContent .bottom-header-section {
   display: block; }
 
 .scroll {
@@ -174,6 +235,23 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center; }
+
+.swiper-pagination {
+  position: relative !important;
+  background: #6f2f8f;
+  background: -moz-linear-gradient(left, #6f2f8f 0%, #a2378e 100%);
+  background: -webkit-linear-gradient(left, #6f2f8f 0%, #a2378e 100%);
+  background: linear-gradient(to right, #6f2f8f 0%, #a2378e 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6f2f8f', endColorstr='#a2378e',GradientType=1 ); }
+
+.swiper-pagination-bullet {
+  background-color: #ebcbeb !important;
+  width: 12px !important;
+  height: 12px !important;
+  margin: 0 5px; }
+
+.swiper-pagination-bullet-active {
+  background-color: #fff !important; }
 
 .swiper-container-horizontal > .swiper-pagination {
   top: 0;
