adding content and icon for BTNs in contentmain.html

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -88,6 +88,10 @@ a
 #header-sectionContent .socialShare
     overflow: hidden
 
+.socialShare i
+    float: left
+    padding: 5px
+
 .contentMedia
     text-align: right
     margin: 10px 0
