--- a/css/index.css
+++ b/css/index.css
@@ -78,6 +78,10 @@ a {
 #header-sectionContent .socialShare {
   overflow: hidden; }
 
+.socialShare i {
+  float: left;
+  padding: 5px; }
+
 .contentMedia {
   text-align: right;
   margin: 10px 0;
